Fix sonar quality issues (#311)